# hybrid_pp

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/hybrid_pp/: PurePursuitNode_node.hpp  filters.hpp
src/: PurePursuitNode.cpp  PurePursuitNode_node.cpp  filters.cpp
tests/: unit.cpp
